--- a/analyze_model_results.ipynb
+++ b/analyze_model_results.ipynb
@@ -1947,6 +1947,228 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "forecast_trends[['yhat', 'yhat_lower', 'yhat_upper']].iloc[-240:, :]"
+      ],
+      "metadata": {
+        "id": "r5i4ffpnWm5T",
+        "outputId": "a370927c-987f-4a47-e809-490579540f35",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 455
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                             yhat    yhat_lower    yhat_upper\n",
+              "ds                                                           \n",
+              "2021-03-15 22:00:00  51729.827750  49425.567364  53978.009076\n",
+              "2021-03-15 23:00:00  51740.880642  49316.729941  53818.422344\n",
+              "2021-03-16 00:00:00  51749.085342  49492.846678  53934.492216\n",
+              "2021-03-16 01:00:00  51753.233438  49284.665727  53880.061689\n",
+              "2021-03-16 02:00:00  51753.940966  49244.506639  53988.999404\n",
+              "...                           ...           ...           ...\n",
+              "2021-03-25 17:00:00  53505.047770  50058.431608  56513.505384\n",
+              "2021-03-25 18:00:00  53514.865846  49859.366688  56617.979824\n",
+              "2021-03-25 19:00:00  53526.239570  50099.216429  56425.438465\n",
+              "2021-03-25 20:00:00  53538.274621  49772.392512  56484.420243\n",
+              "2021-03-25 21:00:00  53550.434734  49858.876941  56526.484171\n",
+              "\n",
+              "[240 rows x 3 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-608e6b13-40e6-4124-888b-4d44cd04f1a0\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>yhat</th>\n",
+              "      <th>yhat_lower</th>\n",
+              "      <th>yhat_upper</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ds</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2021-03-15 22:00:00</th>\n",
+              "      <td>51729.827750</td>\n",
+              "      <td>49425.567364</td>\n",
+              "      <td>53978.009076</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-03-15 23:00:00</th>\n",
+              "      <td>51740.880642</td>\n",
+              "      <td>49316.729941</td>\n",
+              "      <td>53818.422344</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-03-16 00:00:00</th>\n",
+              "      <td>51749.085342</td>\n",
+              "      <td>49492.846678</td>\n",
+              "      <td>53934.492216</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-03-16 01:00:00</th>\n",
+              "      <td>51753.233438</td>\n",
+              "      <td>49284.665727</td>\n",
+              "      <td>53880.061689</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-03-16 02:00:00</th>\n",
+              "      <td>51753.940966</td>\n",
+              "      <td>49244.506639</td>\n",
+              "      <td>53988.999404</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-03-25 17:00:00</th>\n",
+              "      <td>53505.047770</td>\n",
+              "      <td>50058.431608</td>\n",
+              "      <td>56513.505384</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-03-25 18:00:00</th>\n",
+              "      <td>53514.865846</td>\n",
+              "      <td>49859.366688</td>\n",
+              "      <td>56617.979824</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-03-25 19:00:00</th>\n",
+              "      <td>53526.239570</td>\n",
+              "      <td>50099.216429</td>\n",
+              "      <td>56425.438465</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-03-25 20:00:00</th>\n",
+              "      <td>53538.274621</td>\n",
+              "      <td>49772.392512</td>\n",
+              "      <td>56484.420243</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2021-03-25 21:00:00</th>\n",
+              "      <td>53550.434734</td>\n",
+              "      <td>49858.876941</td>\n",
+              "      <td>56526.484171</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>240 rows × 3 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-608e6b13-40e6-4124-888b-4d44cd04f1a0')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-608e6b13-40e6-4124-888b-4d44cd04f1a0 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-608e6b13-40e6-4124-888b-4d44cd04f1a0');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "iGtXIKmpSHef"
